--- a/pom.xml
+++ b/pom.xml
@@ -11,5 +11,10 @@
 			<artifactId>RestExpress</artifactId>
 			<version>0.10.2</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.2.4</version>
+		</dependency>
 	</dependencies>
 </project>
