adding java version.

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,21 @@
 	<groupId>rest.pearson.demo</groupId>
 	<artifactId>rest-demo</artifactId>
 	<version>0.0.1</version>
-
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.0</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+					<meminitial>2g</meminitial>
+					<maxmem>3g</maxmem>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 	<dependencies>
 		<dependency>
 			<groupId>com.strategicgains</groupId>
