--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
 	</build>
 	<dependencies>
 		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.6</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.strategicgains</groupId>
 			<artifactId>RestExpress</artifactId>
 			<version>0.10.2</version>
